--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
           </div>
           <div class="col-xs-6 signin text-right navbar-nav">
-            <a href="#pricing" class="scroll">Contact Me</a>&nbsp; &nbsp;<a href="#">LinkedIn</a>
+<a href="#">LinkedIn</a>
           </div>
         </div>
         
@@ -64,7 +64,7 @@
                   </div>
                   <div class="col-xs-6 text-left wow fadeInUp" data-wow-delay="1.4s">
 
-                   <a href="mailto:christine.boylan3@gmail.com" class="btn btn-primary btn-lg scroll">Email Me</a>
+                   <a href="mailto:christine.boylan3@gmail.com" class="btn btn-primary btn-lg">Email Me</a>
 
                   </div>
                   
