--- a/index.html
+++ b/index.html
@@ -100,17 +100,25 @@
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
 				    <hr class="line purple">
 				    <h3>Education</h3>
-				    <p>I am a graduate from Saint Joseph's University in Philadelphia, PA.</p>
+				    <p>I am an alumna from Saint Joseph's University in Philadelphia, PA. Having earned a Bachelor's Degree in the Arts and Science, my focus was in Communciations and Marketing.</p>
+
+            <p>The Commnications program at SJU focuses largely on technology and the future of the industry, rather than your typical writing and public speaking courses. Through this, I was able to work with 3D printing, begin my basis for computer coding, and delve into various blog spaces.</p>
+            
+            <p> Since graduation, I have held various responsibilities at Sparkroom, a Digital Media Solutions company.</p>
+
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
 				    <hr  class="line blue">
 				    <h3>Work Experience</h3>
-				    <p>I am currently employeed by Digital Media Solutions as an Audience Marketing Coordinator.</p>
+				    <p>I am currently employeed by Digital Media Solutions as an Audience Marketing Coordinator, and have been since September 2015.</p>
+            <p>As a member of the DMS community, I have managed a number of roles ranging from client services to manager social/display accounts. My current responsibility includes, but is not limited to, developing client landing pages which are used primarly for our Facebook PPL campaigns. Thus, I manage our Facebook PPL campaigns from start to finish - ensuring we generate quality leads for our clients for a reasonable CPE or CPM.</p>
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
 				    <hr  class="line yellow">
 				    <h3>Additional Skills</h3>
-				    <p>I am a eager learner who thrives in a competitive industry.</p>
+				    <p>As a Communications Major with a Marketing Minor, I am confident in my written and oral communication skills. For examples of writing, please see the <a href="#press"/>section below. In addition, I am knowledgable in CSS, HTML5, JavaScript and jQuery (an extension of JS).</p>
+
+            <p>Outside of the education, and work, atmosphere, I have held various responsibilities. These responsbilities range from holding a position within the Communications Committee for Alpha Omicron Pi, to taking command on the pitch as both a Fullback and an Inside Center on the Saint Joseph's University Women's Rugby team.</p>
 			    </div>
 		    </div>
 	    </div>
